@@ -41,9 +41,9 @@ mkdir -p $RPM_BUILD_ROOT
 make prefix=$RPM_BUILD_ROOT/usr install
 chmod 755 $RPM_BUILD_ROOT/usr/lib/librvm.so.1.0.0
 chmod 755 $RPM_BUILD_ROOT/usr/lib/librvmlwp.so.1.0.0
-chmod 755 $RPM_BUILD_ROOT/usr/lib/libseg.so.1.0.0
-chmod 755 $RPM_BUILD_ROOT/usr/lib/librds.so.1.0.0
-chmod 755 $RPM_BUILD_ROOT/usr/lib/librdslwp.so.1.0.1
+chmod 755 $RPM_BUILD_ROOT/usr/lib/libseg.so.1.1.0
+chmod 755 $RPM_BUILD_ROOT/usr/lib/librds.so.1.0.2
+chmod 755 $RPM_BUILD_ROOT/usr/lib/librdslwp.so.1.0.2
 
 %clean
 rm -rf $RPM_BUILD_ROOT
