@@ -21,8 +21,8 @@
 lib_LTLIBRARIES = libseg.la
 INCLUDES = -I$(top_srcdir)/include
 libseg_la_SOURCES = rvm_segutil.c rvm_loadseg.c rvm_createseg.c \
-    rvm_segment_private.h
-libseg_la_LDFLAGS = -version-info 1:0:0 $(LIBTOOL_LDFLAGS)
+    rvm_releaseseg.c rvm_segment_private.h
+libseg_la_LDFLAGS = -version-info 2:0:1 $(LIBTOOL_LDFLAGS)
 
 MAINTAINERCLEANFILES = Makefile.in
 
